Fixed a bug where project cards were not centered on page

--- a/course_list.css
+++ b/course_list.css
@@ -1,6 +1,5 @@
 #courses_section {
   font-size: 1.5rem;
-  align-items: center;
 }
 
 #course_list {
