--- a/projects.css
+++ b/projects.css
@@ -1,5 +1,6 @@
 #projects_section {
   display: grid;
+  align-self: center;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   row-gap: 20px;
@@ -9,7 +10,7 @@
 .card {
   display: flex;
   align-items: center;
-  text-align: center;
+  text-align: left;
   gap: 20px;
   border-width: 1px;
   border-left-width: 8px;
@@ -19,6 +20,7 @@
   background-color: #515149;
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-right: 20px;
   margin-left: 20px;
   margin-right: 20px;
   font-size: 16pt;
